Fix issue with product option selection being overlapped

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -91,6 +91,7 @@ h1.product-name
   position: relative
   text-align: center
   width: 100%
+  z-index: 1
 
   &:hover, &:active
     box-shadow: 0px 15px 15px -10px rgba(0,0,0,0.4)
